// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should chain deep sequences correctly 1`] = `"kQADo6IJzJlTwCsVmvFcTsa9yT-FPMiXaMi4QtMF_kXamz09"`;

exports[`feature-random should chain deep sequences correctly 2`] = `"kQBiSmB-Xb0eCDNb6BS2v_osXA80Pqmz7buuYvqqt_AJhrt8"`;

exports[`feature-random should chain deep sequences correctly 3`] = `"kQDQ-EG-ftdG1DqvSKtzGdjV1Lext4X4jrOu1pXt3nfdb1U9"`;

exports[`feature-random should chain deep sequences correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQADo6IJzJlTwCsVmvFcTsa9yT-FPMiXaMi4QtMF_kXamz09",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 18377n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQADo6IJzJlTwCsVmvFcTsa9yT-FPMiXaMi4QtMF_kXamz09",
            "to": "kQBiSmB-Xb0eCDNb6BS2v_osXA80Pqmz7buuYvqqt_AJhrt8",
            "type": "internal",
            "value": 9965634000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQADo6IJzJlTwCsVmvFcTsa9yT-FPMiXaMi4QtMF_kXamz09",
          "to": "kQBiSmB-Xb0eCDNb6BS2v_osXA80Pqmz7buuYvqqt_AJhrt8",
          "type": "internal",
          "value": 9965634000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 17278n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQBiSmB-Xb0eCDNb6BS2v_osXA80Pqmz7buuYvqqt_AJhrt8",
            "to": "kQDQ-EG-ftdG1DqvSKtzGdjV1Lext4X4jrOu1pXt3nfdb1U9",
            "type": "internal",
            "value": 9937550000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBiSmB-Xb0eCDNb6BS2v_osXA80Pqmz7buuYvqqt_AJhrt8",
          "to": "kQDQ-EG-ftdG1DqvSKtzGdjV1Lext4X4jrOu1pXt3nfdb1U9",
          "type": "internal",
          "value": 9937550000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 17206n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQDQ-EG-ftdG1DqvSKtzGdjV1Lext4X4jrOu1pXt3nfdb1U9",
            "to": "kQDQ-EG-ftdG1DqvSKtzGdjV1Lext4X4jrOu1pXt3nfdb1U9",
            "type": "internal",
            "value": 9909530000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQDQ-EG-ftdG1DqvSKtzGdjV1Lext4X4jrOu1pXt3nfdb1U9",
          "to": "kQDQ-EG-ftdG1DqvSKtzGdjV1Lext4X4jrOu1pXt3nfdb1U9",
          "type": "internal",
          "value": 9909530000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 4825n,
      },
    ],
  },
]
`;
